--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- Navigation -->
   <nav>
     <div class="logo">
       <h1>Travex</h1>
@@ -21,7 +20,6 @@
     </ul>
   </nav>
 
-  <!-- About Us Section -->
   <section class="about-section">
     <div class="container">
       <h2>About Travex</h2>
@@ -39,10 +37,9 @@
     </div>
   </section>
 
-  <!-- Contact Us Section -->
   <section class="contact-section">
     <div class="container">
-      <h2>Contact Us</h2>
+      <h2>Connect with Us</h2>
       <p>If you have any questions, feel free to reach out. We'd love to hear from you!</p>
       <form action="#" method="post" class="contact-form">
         <input type="text" name="name" placeholder="Your Name" required>
