--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Destinations</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact us</a></li>
       </ul>
+      <!-- Added Login and Sign Up buttons -->
+      <div class="auth-buttons">
+        <a href="login.html" class="btn login">Login</a>
+        <a href="signup.html" class="btn signup">Sign Up</a>
+      </div>
     </nav>
     <div class="hero">
       <h2>Explore the World with Travex</h2>
