--- a/about.html
+++ b/about.html
@@ -8,17 +8,21 @@
 </head>
 <body>
 
-  <nav>
-    <div class="logo">
-      <h1>Travex</h1>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+<nav>
+  <div class="logo">
+    <h1>Travex</h1>
+  </div>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About us</a></li>
+    <li><a href="contact.html">Contact us</a></li>
+  </ul>
+  <div class="auth-buttons">
+    <a href="login.html" class="btn login">Login</a>
+    <a href="signup.html" class="btn signup">Sign Up</a>
+  </div>
+</nav>
+
 
   <section class="about-section">
     <div class="container">
@@ -36,20 +40,5 @@
       </ul>
     </div>
   </section>
-
-  <section class="contact-section">
-    <div class="container">
-      <h2>Connect with Us</h2>
-      <p>If you have any questions, feel free to reach out. We'd love to hear from you!</p>
-      <form action="#" method="post" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-    </div>
-  </section>
-
-
 </body>
 </html>
