--- a/booking.html
+++ b/booking.html
@@ -220,6 +220,10 @@
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
+                <div class="form-group">
+                    <label for="date">Booking date</label>
+                    <input type="date" id="bookingdate" name="Booking date" required>
+                </div>
 
                 <button type="submit" class="btn">Book Now</button>
             </form>
